# satelitte_testing

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  REWARD_FUNCTION.md  SUBMISSION_CHECKLIST.md  TECHNICAL_SPECIFICATION.md  fetch_tles_local.py  inference.py  main.py  openenv.yaml  pyproject.toml  validation_output.txt
.github/workflows/: ci.yml  sync_to_hf.yml
agents/: README_AGENTS.md  greedy_agent.py  random_agent.py  rule_agent.py
data/: pass_windows.json
data/scenarios/: task1_seed42.json  task2_seed42.json  task3_seed42.json
scripts/: generate_windows.py  validate-submission.sh
server/: Dockerfile  app.py  environment.py  graders.py  requirements.txt  scheduler.py  weather.py
src/envs/satellite_env/: client.py  models.py
src/envs/satellite_env/server/: app.py  environment.py
src/satellite_downlink_scheduler.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_logic.py
