# pyproject.toml  (project root)
#
# This file serves two purposes:
#   1. Makes `pip install -e .` work so `satellite_env` resolves on sys.path
#   2. Declares all dependencies for local development (venv + uv)
#
# The server/requirements.txt is a pinned subset used inside Docker.
# This file uses looser bounds for local dev flexibility.

[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name        = "satellite-downlink-scheduler"
version     = "1.0.0"
description = "OpenEnv environment: satellite downlink scheduling"
readme      = "README.md"
requires-python = ">=3.11"

dependencies = [
    # OpenEnv core
    "openenv-core>=0.1.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "websockets>=12.0",
    "pydantic>=2.7.0",

    # Environment logic
    "numpy>=1.26.0",
    "skyfield>=1.48",

    # Inference script
    "openai>=1.30.0",
    "requests>=2.31.0",

    # Server extras
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.yaml", "*.txt"]

# ── uv script entrypoints ─────────────────────────────────────
# Allows `uv run server` as a shortcut (matches OpenEnv convention)
[project.scripts]
satellite-server = "satellite_env.server.app:create_app"